<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration_background"
    android:orientation="vertical"
    tools:context=".auth.LoginActivity"
    tools:ignore="Overdraw">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:hint="@string/et_hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@color/light" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:hint="@string/et_hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@color/light" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/login_cb_remember_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/gray_dark"
        android:text="@string/cb_remember_me"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/btn_login"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:cornerRadius="15dp" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

</LinearLayout>