...
            android:text="@string/dialog_create_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dialog_create_et_sensor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/dialog_create_et_hint_sensor_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dialog_create_et_sensor_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/dialog_create_et_hint_sensor_description"
        android:importantForAutofill="no"
        android:inputType="text"
...
